--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -26,12 +26,12 @@
           - name: yarn
             run: yarn
             
-          # - name: 'store Artifact'
-          #   uses: actions/upload-artifact@v4
-          #   with:
-          #     name: upload dist
-          #     path: dist
-          #     retention-days: 90
+          - name: 'github-pages'
+            uses: actions/upload-artifact@v4
+            with:
+              name: upload dist
+              path: dist
+              retention-days: 90
           - name: Deploy to GitHub Pages
             uses: actions/deploy-pages@v4
             with:
